CHANGES
=======

five.customerize 0.4 (unreleased)
---------------------------------

Specify all package dependencies.

Added missing dependencies on zope.app.apidoc.

five.customerize 0.3 (2008/07/07)
---------------------------------

Fix for the long-standing issue where the security context had mysteriously
gone missing.


five.customerize 0.2 (2007/08/17)
---------------------------------

Support for viewlets and portlets as used in Plone 3.0


five.customerize 0.1.3 (2007/07/08)
---------------------------------

Fix in setup.py


five.customerize 0.1.2 (2007/05/04)
---------------------------------

Release for Plone 3.0beta3 without OSX metadata


five.customerize 0.1.1 (2007/03/03)
---------------------------------

Minor tweaks and enhancements for the integration into Plone 3.0


five.customerize 0.1 (2006/10/30)
---------------------------------

Initial version
