@@ -44,7 +44,6 @@ setup(name = 'five.customerize',
         'zope.testing',
         'zope.traversing',
         'zope.viewlet',
-        'zope.app.apidoc',
         'zope.app.component',
         'zope.app.container',
         'zope.app.pagetemplate',
