@@ -225,7 +225,7 @@ available to the customized local view.  We create one of these views
   ...         return 'baz'
   >>> from Products.Five.browser.metaconfigure import makeClassForTemplate
   >>> from Products.Five.security import getSecurityInfo, protectClass
-  >>> from Globals import InitializeClass
+  >>> from App.class_init import InitializeClass
   >>> cdict = getSecurityInfo(TestView)
   >>> cdict['__name__'] = 'simpleview.html'
   >>> viewclass = makeClassForTemplate('testviewtemplate.pt', globals=globals(),
